Fixed Nav menu being hidden on tablet

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1496,7 +1496,6 @@ body {
   -ms-align-items: center;
   align-items: center;
   -webkit-overflow-scrolling: touch;
-  position: relative;
   width: 100vw;
   height: 100%;
   cursor: default;
